--- a/src/components/home/courseslist/courseList.css
+++ b/src/components/home/courseslist/courseList.css
@@ -3,7 +3,7 @@
   width: 100%;
   text-align: center;
   padding: 20px;
-  height: 60%;
+  height: auto;
   background-color: #fff;
 }
 
@@ -37,8 +37,7 @@
   position: relative;
   width: 300px;
   height: 300px;
-  /* background-color: #fff; */
-  background-color:  gray;
+  background-color: gray;
   perspective: 1000px;
 }
 
@@ -96,11 +95,10 @@
   text-align: center;
   color: #fff;
 }
+
 .carousel-button {
   background-color: transparent;
   border: 2px solid white;
-  /* border-radius: 30%; */
-  /* padding: 10px 15px; */
   font-size: 14px;
   border-radius: 18px;
   font-weight: bold;
@@ -115,7 +113,7 @@
   background-color: #f9f9f9;
 }
 
-/* From Uiverse.io by gharsh11032000 */ 
+/* Animated Button */
 .animated-button {
   position: relative;
   display: inline-block;
@@ -125,8 +123,8 @@
   background-color: inherit;
   border-radius: 100px;
   font-weight: 600;
-  color:  #f9f9f9;
-  box-shadow: 0 0 0 2px#f9f9f9;
+  color: #f9f9f9;
+  box-shadow: 0 0 0 2px #f9f9f9;
   cursor: pointer;
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
@@ -139,9 +137,7 @@
   transform: translate(-50%, -50%);
   width: 20px;
   height: 20px;
-  /* background-color: #2196F3; */
   background-color: #ff5722;
-  
   border-radius: 50%;
   opacity: 0;
   transition: all 0.8s cubic-bezier(0.23, 1, 0.320, 1);
@@ -153,9 +149,7 @@
 }
 
 .animated-button:hover {
-  /* box-shadow: 0 0 0 5px #2195f360;
-  color: #ffffff; */
-  color:#f9f9f9;; /* Orange */
+  color: #f9f9f9;
   border-color: #ff5722;
   background-color: #f9f9f9;
 }
@@ -170,4 +164,55 @@
   opacity: 1;
 }
 
+/* Adjustments for mobile responsiveness */
+@media (max-width: 768px) {
+  .carousel-container {
+    padding: 15px;
+  }
 
+  .carousel-title {
+    font-size: 1.5rem;
+  }
+
+  .carousel-items {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .card {
+    width: 250px;
+    height: 250px;
+  }
+
+  .carousel-button {
+    font-size: 12px;
+  }
+
+  .animated-button {
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 780px) {
+  .carousel-title {
+    font-size: 1.2rem;
+  }
+
+  .carousel-items {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .card {
+    width: 780px;
+    height: 200px;
+  }
+
+  .carousel-button {
+    font-size: 10px;
+  }
+
+  .animated-button {
+    padding: 8px 16px;
+  }
+}
