--- a/src/components/home/courseslist/courseList.css
+++ b/src/components/home/courseslist/courseList.css
@@ -35,16 +35,18 @@
 /* Flip Card Styles */
 .card {
   position: relative;
-  width: 300px;
-  height: 300px;
-  background-color: gray;
+  width: 350px;
+  height: 350px;
+  background-color: #fff;
   perspective: 1000px;
+  /* border-radius: 10%; */
 }
 
 .content {
   position: relative;
   width: 100%;
   height: 100%;
+  
   transform-style: preserve-3d;
   transition: transform 0.6s;
 }
@@ -63,7 +65,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
+  border-radius: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -117,11 +119,11 @@
 .animated-button {
   position: relative;
   display: inline-block;
-  padding: 12px 24px;
+  padding: 12px;
   border: none;
   font-size: 16px;
   background-color: inherit;
-  border-radius: 100px;
+  border-radius: 10px;
   font-weight: 600;
   color: #f9f9f9;
   box-shadow: 0 0 0 2px #f9f9f9;
